--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tj-web",
   "version": "1.0.0",
-  "description": "A TJ-SIF 2018 website",
+  "description": "A TJ-SSF 2018 website",
   "author": "ouoam <poompathai.cha@pccpl.ac.th>",
   "private": true,
   "scripts": {
@@ -14,7 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
+    "vue": "^2.5.13",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
